syntax = "proto3";

package demo.community;

option go_package = "github.com/SIN5t/tRPC-go/proto/community";

import "common/metadata.proto";

message Topic {
  int64 id = 1;
  string title = 2;
  string description = 3;
  string created_at = 4;         // 创建时间
}

message Post {
  int64 id = 1;
  int64 parentId = 2;
  string author = 3;
  string content = 4;
  string created_at = 5;         // 创建时间

}

message GetTopicRequest {
  string id = 1;
  common.MetaData metadata = 2;
}

message GetTopicResponse {
  int32  err_code = 1;
  string err_msg  = 2;
  Topic topic = 3;
}

message GetPostRequest {
  common.MetaData metadata = 1;
  repeated Post post = 2;
}

message GetPostResponse {
  int32  err_code = 1;
  string err_msg  = 2;
  string id = 3;
  string parent_id = 4;
  string content = 5;
  string create_time = 6;
}

service GetTopicService {
  rpc GetTopicById(GetTopicRequest) returns(GetTopicResponse); //  @alias=/demo/community/topic
  rpc GetPostByTopicId(GetPostRequest) returns(GetPostResponse); // @alias=/demo/community/post
}